I changed the margins so it bleeds all the way up and I changed the colors a little. I have commitment issues so the h3 colors might change

--- a/style2.css
+++ b/style2.css
@@ -44,18 +44,19 @@ html {
 h1, h2 {
     color: white;
     font-family: 'Megrim', cursive;    
-    font-size: 2em; 
     font-weight: lighter;
     text-align: center;
     text-shadow: black 3px 3px 3px;
 }
 
 h1 {
+    font-size: 2em;
     padding-top: 185px;
 }
 
 h2 {
-    padding-top: 25px;
+    font-size: 1.5em;
+    padding-top: 30px;
 }
 
 h3 {
